2014-01-03 Erwin Waterlander <waterlan@xs4all.nl>
	* man/nl/man1/dos2unix.pod, man/es/man1/dos2unix.pod: Add =encoding
	  latin1 command. Perl 5.18 requires =encoding for all non-ASCII pod
	  files.
	  See also https://rt.cpan.org/Public/Bug/Display.html?id=91805
	  Minimal perl version is now 5.10.1.
	* Makefile: Target clean keeps generated non-English manual files to
	  avoid problems with old perl version. Target maintainer-clean will
	  erase the generated non-English manual files.
	* INSTALL.txt: Update for new required perl version.

2013-12-30 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.4
	* man/nonlatin/man1/ru/dos2unix.pod: Removed. Russian
	  translation of manual moved to later release.

2013-11-26 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile, common.c: When MinGW-w64 is used for 32 bit, option
	  -V prints (MinGW-w64) for used compiler name.

2013-11-24 Erwin Waterlander <waterlan@xs4all.nl>
	* mingw32.mak: New makefile for MinGW-w64 targeting win32.
	  MinGW-w64 supports Large File Support (LFS) with
	  -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 while mingw.org
	  doesn't. Dos2unix failed when concurrent dos2unix processes
	  processed huge files on Windows network share drives.
	  Using MinGW-w64 with LFS support fixed the problem.
	  Thanks to report by F.J. Brandelik.


2013-10-07 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Set MAN_NONLATIN back to 1. Include non-Latin
	  manuals in source package to prevent compilation troubles.
	  Target 'clean' keeps non-Latin manuals. Use 'maintainer-clean'
	  to erase them.

2013-10-05 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: By default don't build non-Latin1 manuals. There are
	  still too many old perl/pod2man versions around (perl < 5.10.1).
	  Add MAN_NONLATIN=1 to enable non-Latin1 manuals.

2013-10-01 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/Makefile: Support non-Latin1 man pages.
	* Makefile: Support non-Latin1 man pages.